# flame.cat

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  svg.rs
crates/core/src/model/: call_tree.rs  lane.rs  mod.rs  profile.rs  session.rs
crates/core/src/parsers/: chrome.rs  collapsed.rs  cpuprofile.rs  ebpf.rs  firefox.rs  mod.rs  pix.rs  pprof.rs  react.rs  speedscope.rs  tracy.rs
crates/core/src/views/: async_track.rs  counter.rs  cpu_samples.rs  flow_arrows.rs  frame_track.rs  left_heavy.rs  markers.rs  minimap.rs  mod.rs  object_track.rs  ranked.rs  sandwich.rs  time_axis.rs  time_order.rs
crates/core/tests/: multi_profile_session.rs
crates/core/tests/fixtures/: chrome-trace-sample.json
crates/protocol/: Cargo.toml
crates/protocol/src/: commands.rs  lib.rs  shared_str.rs  theme.rs  types.rs  visual_profile.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs  renderer.rs
crates/ui/: .gitignore  Cargo.toml  Trunk.toml  index.html
crates/ui/assets/: react-demo.json  react-devtools-demo.json
crates/ui/src/: app.rs  lib.rs  renderer.rs  theme.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  protocol.ts  vite-env.d.ts
web/src/app/: detail-panel.ts  hovertip.ts  index.ts  interaction.ts  lane-manager.ts  lane-sidebar.ts  search-bar.ts  toolbar.ts
web/src/renderers/canvas/: renderer.ts
web/src/renderers/svg/: index.ts  renderer.ts
web/src/renderers/webgl/: index.ts  renderer.ts
web/src/renderers/webgpu/: index.ts  rect.wgsl  renderer.ts  sdf-atlas.ts  text.wgsl
web/src/themes/: index.ts  theme.ts
