[package]
name = "flame-cat-ui"
description = "egui-based UI for flame.cat"
version.workspace = true
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flame-cat-core = { path = "../core" }
flame-cat-protocol = { path = "../protocol" }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.33"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Window", "HtmlCanvasElement",
    "HtmlInputElement", "FileList", "File", "FileReader",
    "Response",
    "console",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

[lints]
workspace = true
