[package]
name = "flame-cat-wasm"
description = "WASM bridge for flame.cat"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flame-cat-core = { path = "../core" }
flame-cat-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[lints]
workspace = true
